tests/errors/syntax.NewlineInQuotedString.res
>> Syntax | File: syntax.NewlineInQuotedString.art
    error | Line: 5
          | 
          | newline in quoted string
          | for multiline strings, you could use either:
          | curly blocks {..} or triple "-" templates
          | 
          | near: something else  "  print "hello"
          |                       ^